--- a/1/makefile
+++ b/1/makefile
@@ -2,3 +2,5 @@ CFLAGS=-I/usr/X11R6/include
 LDLIBS=-L/usr/X11R6/lib -lglfw -lGL -lcglm
 a.out: 1.c
 	$(CC) $(CFLAGS) 1.c $(LDLIBS)
+		./a.out
+	rm -f a.out 
