--- a/2-1/makefile
+++ b/2-1/makefile
@@ -1,4 +1,6 @@
 CFLAGS=-I/usr/X11R6/include
-LDLIBS=-L/usr/X11R6/lib -lglut -lGL -lGLU -lcglm
+LDLIBS=-L/usr/X11R6/lib -lglut -lGL -lGLU -lcglm -lm
 a.out: 2-1.c
-	$(CC) $(CFLAGS) 2-1.c $(LDLIBS)
+	$(CC) $(CFLAGS) 2-1.c ../rot_qua/rot_qua.c $(LDLIBS)
+	./a.out
+	rm -f a.out 
