--- a/3-2/makefile
+++ b/3-2/makefile
@@ -1,4 +1,6 @@
 CFLAGS=-I/usr/X11R6/include
-LDLIBS=-L/usr/X11R6/lib -lglut -lGL -lGLU -lcglm
+LDLIBS=-L/usr/X11R6/lib -lglut -lGL -lGLU -lcglm -lm
 a.out: 3-2.c
-	$(CC) $(CFLAGS) 3-2.c $(LDLIBS)
+	$(CC) $(CFLAGS) 3-2.c ../rot_qua/rot_qua.c $(LDLIBS)
+	./a.out
+	rm -f a.out 
